# YTUploader

./: .gitattributes  .gitignore  LICENSE  PLAN.MD  README.md  build_script.py  installer.iss  main.py  pyproject.toml
.github/workflows/: ci.yml
core/: __init__.py  catalog_store.py  data_manager.py  job_store.py  losslesscut.py  metadata_exporter.py  models.py  mpc_be.py  paths.py  runtime_installer.py  video_processor.py  workflow.py  youtube_uploader.py
credentials/: README.md
tests/: test_catalog_store.py  test_data_manager.py  test_job_store.py  test_losslesscut.py  test_mpc_be.py  test_paths.py  test_runtime_installer.py  test_video_processor.py  test_youtube_uploader.py
ui/: main_window.py  mpc_preview.py  runtime_setup_dialog.py  worker_threads.py
